# Rokae_RCM_follow

./: .gitignore  README.md
RCM_yolov5/: detector.py  loop_detect.py  loop_detect_sender.py  tcp_sender.py
Rokae_rci/: CMakeLists.txt  xmate.ini
Rokae_rci/examples/: cartesian_impedance_move.cpp  cartesian_nullspace_move.cpp  cartesian_position_move.cpp  cartesian_position_move_xmate7.cpp  cartesian_rotation_move.cpp  cartesian_s_line_mu.cpp  drag_test.cpp  joint_impedance_move.cpp  joint_s_mu.cpp  torque_control.cpp
Rokae_rci/inc/convex/: Min_convex.cpp  Min_convex.h
Rokae_rci/inc/include/: model.h
Rokae_rci/rcm_follow/: CMakeLists.txt  admittance.cpp  admittance.h  admittance_improved.cpp  admittance_improved.h  admittance_improved_test.cpp  admittance_test.cpp  runner.cpp  runner.h  runner_improved.cpp  runner_improved.h
Rokae_rci/rcm_follow/old/other/: advirtual_wall.cpp  follow.cpp  followV.cpp  joint_impedance_by_torque.cpp  last_test.cpp  network.cpp  network.h  network1.h  read_load.cpp  read_model_test.cpp  spiral_line.cpp  spiral_line_offline.cpp  test.cpp  virtual_wall_test.cpp
Rokae_rci/rcm_follow/old/v0/: admittance_v0.cpp
Rokae_rci/rcm_follow/old/v1/: admittance_follow_v1.cpp  admittance_test_old_v1.cpp  admittance_v1.cpp  admittance_v1.h
Rokae_rci/task_priority/: CMakeLists.txt  follow_task_priority_admittance.cpp  runner.cpp  runner.h  task_priority.cpp  task_priority.h  task_priority_admittance_test.cpp  task_priority_impedance_test.cpp  task_priority_test.cpp  tcp_recv.cpp  tcp_recv.h  test_task_priority_admittance.cpp  test_task_priority_impedance.cpp
Rokae_rci/task_ptiority/: model_base.h  runner.cpp  runner.h  task_priority.cpp  task_priority_test.cpp
